<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.anandparmeetsingh.magicmusic.MainActivity">


    <RelativeLayout
        android:id="@+id/nowPlaying"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="#FF9800"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                style="@style/imageView"
                android:contentDescription="@string/now_playing"
                android:src="@drawable/musical" />

            <TextView
                style="@style/textView"
                android:text="@string/now_playing" />

        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="#FB8C00"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon3"
                style="@style/imageView"
                android:contentDescription="@string/library"
                android:src="@drawable/library" />

            <TextView
                style="@style/textView"
                android:text="@string/library" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/playlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="#FF9800"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/icon4"
                style="@style/imageView"
                android:contentDescription="@string/PlayList"
                android:src="@drawable/playlist" />

            <TextView
                style="@style/textView"
                android:text="@string/PlayList" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/favorites"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:background="#FB8C00"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon7"
                style="@style/imageView"
                android:contentDescription="@string/favorites"
                android:src="@drawable/favorites" />

            <TextView
                style="@style/textView"
                android:text="@string/favorites" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimaryDark"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/radio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#E65100">

            <ImageView
                android:id="@+id/icon2"
                style="@style/RelativeImageView"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/explore"
                android:src="@drawable/explore" />

            <TextView
                style="@style/RelativeTextView"
                android:layout_below="@id/icon2"
                android:text="@string/explore" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/explore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#EF6C00">

            <ImageView
                android:id="@+id/icon1"
                style="@style/RelativeImageView"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/radio"
                android:src="@drawable/radios" />

            <TextView
                style="@style/RelativeTextView"
                android:layout_below="@id/icon1"
                android:text="@string/radio" />
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>


